# d3d12-ubench

./: CMakeLists.txt  LICENSE.MIT  README.md  analyze_csv.py  comparative.sh  d3d12_ubench.cpp  device.cpp  device.hpp
include/: vkd3d_command_list_vkd3d_ext.h  vkd3d_command_queue_vkd3d_ext.h  vkd3d_core_interface.h  vkd3d_d3d12.h  vkd3d_d3d12sdklayers.h  vkd3d_d3dcommon.h  vkd3d_device_vkd3d_ext.h  vkd3d_dxcapi.h  vkd3d_dxgi.h  vkd3d_dxgi1_2.h  vkd3d_dxgi1_3.h  vkd3d_dxgi1_4.h  vkd3d_dxgi1_5.h  vkd3d_dxgibase.h  vkd3d_dxgiformat.h  vkd3d_dxgitype.h  vkd3d_swapchain_factory.h  vkd3d_vk_includes.h
shaders/: CMakeLists.txt  cbv.hlsl  generate.py  lut.hlsl  srv_2d.hlsl  srv_bab.hlsl  srv_bab_16bit.hlsl  srv_strided.hlsl  srv_structured.hlsl  srv_structured_16bit.hlsl  srv_texel_buf.hlsl  tests.hlsl  uav_2d.hlsl  uav_bab_read.hlsl  uav_structured.hlsl  uav_write_2d.hlsl
